--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div class=header>
-    <h1>馬田さんのホームページ</h1>
+    <h1>馬田のホームページ</h1>
     <div>せつめいせつめい</div>
   </div>
   <div class=main>
