--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,7 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        スクラッチを使って線を書くプログラムを作成した. このプログラムでは猫を円運動させながら線を引き, さらに猫のスタンプを描いている. これにより渦を描いている. <br>
         2.感想<br>
         感想を自分で書く。<br>
       </div>
@@ -62,7 +62,7 @@
     
   </div>
   <div class=footer>
-    作成日：2022年MM月DD日
+    作成日：2022年10月26日
   </div>
 </body>
 </html>
