--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>馬田のホームページ</h1>
-    <div>せつめいせつめい</div>
+    <div>しんどい. </div>
   </div>
   <div class=main>
     <div>
