--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </div>
   <div class=main>
     <div>
-      <h2>さぶたいとる１</h2>
+      <h2>特徴</h2>
       <div>
-        ほんぶん１
+        身長177cm, やせ型, メガネ
       </div>
     </div>
 
