--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
 
     <div>
-      <h2>さぶたいとる２</h2>
+      <h2>資格</h2>
       <div>
-        ほんぶん２
+        英検2級, TOEIC615, フライドポテト・アンバサダー検定 ブロンズ
       </div>
     </div>
   </div>
