--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <div>
       <h2>資格</h2>
       <div>
-        英検2級, TOEIC615, フライドポテト・アンバサダー検定 ブロンズ
+        英検2級, TOEIC615, フライドポテト・アンバサダー検定 ブロンズ, 第二級陸上特殊無線技士
       </div>
     </div>
   </div>
   <div class=footer>
-    ふったー
+    申し訳ございません。
   </div>
 </body>
 </html>
