--- a/rep01.html
+++ b/rep01.html
@@ -31,9 +31,9 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを作成した. このプログラムでは猫を円運動させながら線を引き, さらに猫のスタンプを描いている. これにより渦を描いている. <br>
+        スクラッチを使って線を書くプログラムを作成した. このプログラムでは猫を円運動させながら線を引き, さらに猫のスタンプを押している. これにより眼球のような模様の渦を描いている. <br>
         2.感想<br>
-        渦を<br>
+        もっと気味の悪い渦を描こうと思ったが, 作り方が思いつかなかったため, 上図のようになった. 自分のセンスを磨いてさらに見た目の印象が強い渦を描きたいと思った. <br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        降ってくる雷を猫が頭で受け止めてスコアを稼ぐゲームを作成した. <br>
         2.感想<br>
-        かんそうかんそう<br>        
+        猫が雷に当たったときに体が真っ黒になるように絵を追加したが, 上手くいかず断念した. 原因はコスチューム3に黒くなった猫の画像を作ったためだと考える. <br>        
       </div>
     </div>
 
