--- a/rep01.html
+++ b/rep01.html
@@ -54,15 +54,15 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://madamadamad.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        自分の特徴と持っている資格が記載されたホームページを作成した. <br>
         2.感想<br>
-        かんそうかんそう<br>        
+        一目で自分のものだとわかるように内容を工夫した. また, 資格覧に最近とった資格も記載しておいたため, ほぼ最新の状態となっている. <br>        
       </div>      
     </div>
     
   </div>
   <div class=footer>
-    作成日：2022年10月26日
+    作成日：2022年11月02日
   </div>
 </body>
 </html>
