--- a/rep01.html
+++ b/rep01.html
@@ -56,7 +56,7 @@
         1.内容<br>
         自分の特徴と持っている資格が記載されたホームページを作成した. <br>
         2.感想<br>
-        一目で自分のものだとわかるように内容を工夫した. また, 資格覧に最近とった資格も記載しておいたため, ほぼ最新の状態となっている. <br>        
+        一目で自分のものだとわかるように内容を工夫した. また, 資格覧に最近とったばかりの資格も記載しておいたため, ほぼ最新の状態となっている. <br>        
       </div>      
     </div>
     
