--- a/rep02.html
+++ b/rep02.html
@@ -28,12 +28,12 @@
     <h2>第2週目</h2>
     <div>
       <h3>2-1 １週目のレポートをHTMLで作る</h3>
-      <a href="https://tmhrdoi.github.io/website/rep01.html">１週目のレポート</a><br>
+      <a href="https://madamadamad.github.io/website/rep01">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        1週目のレポートを作成した. 自分のした内容と感想を書いた. <br>
         2.感想<br>
-        かんそうかんそう<br>
+        短い文章でまとめられるよう努力した. それにより読む量を少なくなり, 授業で何をして何を考えたのかすぐに理解できるようになっていると考える. <br>
       </div>
     </div>
 
