--- a/rep02.html
+++ b/rep02.html
@@ -31,9 +31,9 @@
       <a href="https://madamadamad.github.io/website/rep01">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        1週目のレポートを作成した. 自分のした内容と感想を書いた. <br>
+        1週目のレポートを作成した. 自分のしたことの内容と感想を書いた. <br>
         2.感想<br>
-        短い文章でまとめられるよう努力した. それにより読む量を少なくなり, 授業で何をして何を考えたのかすぐに理解できるようになっていると考える. <br>
+        短い文章でまとめられるよう努力した. それにより読む量を少なくして, 授業で何をして何を考えたのかすぐに理解できるようになったと考える. <br>
       </div>
     </div>
 
