--- a/rep01.html
+++ b/rep01.html
@@ -42,7 +42,7 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        降ってくる雷を猫が頭で受け止めてスコアを稼ぐゲームを作成した. <br>
+        降ってくる雷を左右に動くことができる猫が体で受け止めてスコアを稼ぐゲームを作成した. <br>
         2.感想<br>
         猫が雷に当たったときに体が真っ黒になるように絵を追加したが, 上手くいかず断念した. 原因はコスチューム3に黒くなった猫の画像を作ったためだと考える. <br>        
       </div>
