--- a/rep02.html
+++ b/rep02.html
@@ -42,9 +42,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        ウェブカメラで入力した画像から, じゃんけんのグー, チョキ, パー, 何も出していないを判別する機械学習を学んだ. <br>
         2.感想<br>
-        かんそうかんそう<br>        
+        自分の目が大きくなっていたり, 寄り目になっていることも判別できるようにクラスを追加して, サンプルを撮影した. 寄り目を判別することが少し難しかった. また, 目を見開いたら「おおきいめ」のパーセンテージが増え, 何もしていないときはパーと判別された. 学習率が何なのか知りたい. <br>        
       </div>
     </div>
     
