--- a/rep02.html
+++ b/rep02.html
@@ -44,7 +44,7 @@
         1.内容<br>
         ウェブカメラで入力した画像から, じゃんけんのグー, チョキ, パーを判別する機械学習を学んだ. <br>
         2.感想<br>
-        自分の目が大きくなっていたり, 寄り目になっていることも判別できるようにクラスを追加して, サンプルを撮影した. 寄り目を判別することが上手くできなかった. また, 目を見開いたら「おおきいめ」のパーセンテージが増え, 何もしていないときはパーと判別された. 学習率が何なのか知りたい. <br>        
+        自分の目が大きくなっていたり, 寄り目になっていることも判別できるようにクラスを追加して, サンプルを撮影した. 大きい目を判別することはできたが, 寄り目を判別することは上手くできなかった. また, 何もしていないときはパーと判別されていたので, サンプルが良くなかったのだと考える. 学習率が何なのか知りたい. <br>        
       </div>
     </div>
     
