--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
   </div>
   <div class=footer>
     申し訳ございません. 
+    
+  <div>
+      <h3>1-3 レポート</h3>
+      <div>
+        <!-- 自分のホームページのURLに置き替える↓ -->
+        <a href="https://madamadamad.github.io/website/rep01">レポート1</a><br>
+        <div>
+        <!-- 自分のホームページのURLに置き替える↓ -->
+        <a href="https://madamadamad.github.io/website/rep02">レポート2</a><br>
   </div>
 </body>
 </html>
