--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     申し訳ございません. 
     
   <div>
-      <h3>1-3 レポート</h3>
+      <h3>わたくしのレポート類</h3>
       <div>
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://madamadamad.github.io/website/rep01">レポート1</a><br>
