--- a/rep02.html
+++ b/rep02.html
@@ -52,9 +52,10 @@
       <h3>2-3 VR（バーチャルリアリティー：Virtual Reality）の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRを装着して会議に参加した. 自分のペアの子のアバターが瞬間移動を繰り返していた. <br>
         2.感想<br>
-        かんそうかんそう<br>
+        会議室の雰囲気を味わうことができるので, 実際の会議も現地に行かなくても会議に参加できるようにこれを導入してほしい. 便利なので, 座学の授業はVRで行ってほしいと考えた. 
+      <br>
       </div>
     </div>
     
