--- a/rep02.html
+++ b/rep02.html
@@ -54,7 +54,7 @@
         1.内容<br>
         VRを装着して会議に参加した. 自分のペアの子のアバターが瞬間移動を繰り返していた. <br>
         2.感想<br>
-        会議室の雰囲気を味わうことができるので, 実際の会議も現地に行かなくても会議に参加できるようにこれを導入してほしい. 便利なので, 座学の授業はVRで行ってほしいと考えた. 
+        会議室の雰囲気を味わうことができて緊張感も持てるので, 実際の会議も現地に行かなくても会議に参加できるようにこれを導入してほしい. VRはとても便利だと感じたので, 座学の授業はVRで行ってほしいと思った. 
       <br>
       </div>
     </div>
