--- a/rep02.html
+++ b/rep02.html
@@ -52,9 +52,9 @@
       <h3>2-3 VR（バーチャルリアリティー：Virtual Reality）の体験</h3>
       <div>
         1.内容<br>
-        VRを装着して会議に参加した. 自分のペアの子のアバターが瞬間移動を繰り返していた. <br>
+        VRを装着して会議に参加する体験をした. 自分のペアの子のアバターが瞬間移動を繰り返していた. <br>
         2.感想<br>
-        会議室の雰囲気を味わうことができて緊張感も持てるので, 実際の会議も現地に行かなくても会議に参加できるようにこれを導入してほしい. VRはとても便利だと感じたので, 座学の授業はVRで行ってほしいと思った. 
+        会議室の雰囲気を味わうことができて, かつ, 緊張感も持てるので, 実際の会議も現地に行かなくても会議に参加できるようにこれを導入してほしい. VRはとても便利だと感じたので, 座学の授業はVRで行ってほしいと思った. 
       <br>
       </div>
     </div>
