--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div>
       <h2>資格</h2>
       <div>
-        英検2級, TOEIC615, フライドポテト・アンバサダー検定 ブロンズ, 第二級陸上特殊無線技士
+        英検2級, TOEIC615, フライドポテト・アンバサダー検定 ブロンズ, 第二級陸上特殊無線技士, 危険物取扱者乙種4類
       </div>
     </div>
   </div>
@@ -52,7 +52,7 @@
         <a href="https://madamadamad.github.io/website/rep02">レポート2</a><br>
           <div> 
           <div>
-      <h3>最終編集：2022/11/02 11:49</h3>
+      <h3>最終編集：2022/11/11 11:12</h3>
       <div>
   </div>
 </body>
