--- a/vr.html
+++ b/vr.html
@@ -1,14 +1,19 @@
 <html>
   <head>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sphere position="0 3 -5" radius="1.0" color="#8b4513"></a-sphere>
+      <a-cylinder position="0 0.5 -5" radius="1.0" height="4.8" color="#8b4513"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#00ff00"></a-plane>
+      <a-cylinder position="2.1 2.3 -5" radius="0.5" height="1.6" color="#8b4513"></a-cylinder>
+      <a-cylinder position="-2.1 1.75 -5" radius="0.5" height="1.5" color="#8b4513"></a-cylinder>
+      <a-sky color="#87ceeb"></a-sky>
+      <a-box position="-1.8 2 -5" rotation="90 0 0" color="#8b4513"></a-box>
+      <a-box position="1.8 2 -5" rotation="90 0 0" color="#8b4513"></a-box>
+      <a-box position="1.3 2 -5" rotation="90 0 0" color="#8b4513"></a-box>
+      <a-box position="-1.3 2 -5" rotation="90 0 0" color="#8b4513"></a-box>
     </a-scene>
   </body>
 </html>
