--- a/rep03.html
+++ b/rep03.html
@@ -27,13 +27,13 @@
     <h2>第3週目</h2>
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
-      <img src=".png" alt="JavaScript" width="50%" height="50%"><br>
+      <img src="vr.png" alt="JavaScript" width="50%" height="50%"><br>
       <a href="https://madamadamad.github.io/website/vr.html">VR</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        天気が快晴の広大な草原にいるはにわを作成した．球と円柱と立方体を使って作成した．<br>
         2.感想<br>
-        かんそうかんそう<br>
+        球と円柱だけで作ることができればもう少し丸みを帯びさせられたが，うまくいかず断念した．円柱の回転のさせ方がわからなかった．<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://tmhrdoi.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        伝言板のサイトを作成した．最近のサイトではEnterキー押下で入力を確定できるものがあるが，方法がわからないので，入力したらセットボタンを押してもらうよう指示している．<br>
         2.感想<br>
-        かんそうかんそう<br>
+        ボタンを作って伝言を残しておく方法が分かった．また，<br>
       </div>
     </div>
 
