--- a/rep03.html
+++ b/rep03.html
@@ -39,7 +39,7 @@
     <div>
       <h3>3-1 JavaScript体験：伝言プログラムを作る</h3>
       <img src="js.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://tmhrdoi.github.io/website/dengon.html">伝言板</a><br>                                   
+      <a href="https://madamadamad.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
         伝言板のサイトを作成した．最近のサイトではEnterキー押下で入力を確定できるものがあるが，方法がわからないので，入力したらセットボタンを押してもらうよう指示している．<br>
