--- a/rep03.html
+++ b/rep03.html
@@ -33,7 +33,7 @@
         1.内容<br>
         天気が快晴の広大な草原にいるはにわを作成した．球と円柱と立方体を使って作成した．<br>
         2.感想<br>
-        球と円柱だけで作ることができればもう少し丸みを帯びさせられたが，うまくいかず断念した．円柱の回転のさせ方がわからなかった．<br>
+        立方体を使わずに球と円柱だけで作ることができればはにわにもう少し丸みを持たせられたが，うまくいかず断念した．円柱の回転のさせ方がわからなかった．また，色コードを見つけることができるとても便利なサイトがあると知った．<br>
       </div>
     </div>
     <div>
@@ -44,7 +44,7 @@
         1.内容<br>
         伝言板のサイトを作成した．最近のサイトではEnterキー押下で入力を確定できるものがあるが，方法がわからないので，入力したらセットボタンを押してもらうよう指示している．<br>
         2.感想<br>
-        ボタンを作って伝言を残しておく方法が分かった．また，<br>
+        ボタンを作って伝言を残しておく方法が分かった．また，ボタンを押して入力を確定したら入力ボックスの中身が消えるようにした．<br>
       </div>
     </div>
 
