--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class=footer>
-    申し訳ございません. 
+    にゃー
     
   <div>
       <h3>わたくしのレポート類</h3>
@@ -51,8 +51,10 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://madamadamad.github.io/website/rep02">レポート2</a><br>
           <div> 
+             <!-- 自分のホームページのURLに置き替える↓ -->
+        <a href="https://madamadamad.github.io/website/rep03">レポート3</a><br>
           <div>
-      <h3>最終編集：2022/11/11 11:12</h3>
+      <h3>最終編集：2022/11/16 11:08</h3>
       <div>
   </div>
 </body>
