--- a/rep03.html
+++ b/rep03.html
@@ -44,7 +44,7 @@
         1.内容<br>
         伝言板のサイトを作成した．最近のサイトではEnterキー押下で入力を確定できるものがあるが，方法がわからないので，入力したらセットボタンを押してもらうよう指示している．<br>
         2.感想<br>
-        ボタンを作って伝言を残しておく方法が分かった．また，ボタンを押して入力を確定したら入力ボックスの中身が消えるようにした．<br>
+        ボタンを作って伝言を残しておく方法が分かった．また，ボタンを押して入力を確定したら入力ボックスの中身が消えるようにした．表示している文字に空白を入れたりする方法を学びたい．<br>
       </div>
     </div>
 
@@ -52,9 +52,9 @@
       <h3>3-2 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        3次元空間で立方体や球を動かした．また，球を大量に撃って球にあてた．<br>
         2.感想<br>
-        かんそうかんそう<br>
+        自分も勉強して簡単なシューティングゲームを作成できるようになりたいと思った．インターネットで調べれば自分がわからないコードの書き方を知れるとわかったので，どんどん活用しようと思ったが，自分でも組めるようになりたいと思った．<br>
       </div>
     </div>
   
