--- a/rep03.html
+++ b/rep03.html
@@ -52,7 +52,7 @@
       <h3>3-2 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        3次元空間で立方体や球を動かした．また，球を大量に撃って球にあてた．<br>
+        3次元空間で立方体や球を動かした．また，球を撃って立方体にあてると跳ね返ることを確認して，当たり判定があることを確かめた．<br>
         2.感想<br>
         自分も勉強して簡単なシューティングゲームを作成できるようになりたいと思った．インターネットで調べれば自分がわからないコードの書き方を知れるとわかったので，どんどん活用しようと思ったが，自分でも組めるようになりたいと思った．<br>
       </div>
